<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:fadingEdge="vertical"
    android:orientation="vertical"
    android:padding="3dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical|none"
    android:visibility="visible"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_marginTop="19dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_page"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="#000"
            android:ems="10"
            android:hint="@string/hint_current_page"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout01"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="23dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_step"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#000"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/default_minute"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#000"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/default_second"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_page"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="#000"
            android:ems="10"
            android:hint="@string/hint_end_page"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/b_begin"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/begin" />

        <Button
            android:id="@+id/b_stop"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="14dp"
        android:text="@string/lock_count" />

</RelativeLayout>